kubernetes-manifests/basicgosvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: basicgo
  labels:
    app: basicgo
spec:
  type: LoadBalancer
  selector:
    app: basicgo
  ports:
  - port: 80
    targetPort: http-server
