kubernetes-manifests/basicgoistio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - basicgo.gyucegok.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-vs
spec:
  hosts:
  - basicgo.gyucegok.com
  - basicgo  
  gateways:
  - my-gateway
#  - mesh # applies to all the sidecars in the mesh
  http:
  -  route:
      - destination:
          host: basicgo
          port:
            number: 80
